--- a/ah.html
+++ b/ah.html
@@ -24,70 +24,79 @@
 
       <h2 style="font-size: 22px">¿Qué es el Ácido Hialurónico?</h2>
 
+      <div class = "squared">
+
       <p>
-        Es un componente natural del Líquido Sinovial de las articulaciones. Se sintetiza en el laboratorio.
+        Es un componente natural del <strong>Líquido Sinovial</strong> de las articulaciones. Se sintetiza en el laboratorio.
       </p>
 
       <p>
-        Sus propiedades principales son
+        Las propiedades principales de la inyección intra-articular del Ácido Hialurónico son
       </p>
-        <ul>
-          <li>Formar un colchón amortiguador entre las superficies articulares.</li>
-          <li>Proteger el cartílago articular.</li>
-          <li>Lubricar la articulación.</li>
-          <li>Mejora la movilidad articular.</li>
+        <ul style="margin:0">
+          <li><strong>Calmar el dolor</strong></li>
+          <li>Formar un <strong>colchón amortiguador</strong> entre las superficies articulares.</li>
+          <li><strong>Proteger el cartílago articular</strong>.</li>
+          <li><strong>Lubricar</strong> la articulación.</li>
+          <li><strong>Inhibir la degeneración del cartílago</strong>.</li>
+          <li><strong>Mejorar la movilidad articular</strong>.</li>
         </ul>
 
+      </div>
+
+      <div class = "squared">
 
       <p>La indicación principal</p>
-        <ul>
-          <li>Artrosis de
+
+        <ul style="margin:0">
+          <li><strong>Artrosis</strong> de
             <ul>
-              <li>Rodilla</li>
-              <li>Caderas</li>
-              <li>Hombros</li>
+              <li><strong>Rodilla</strong></li>
+              <li><strong>Caderas</strong></li>
+              <li><strong>Hombros</strong></li>
             </ul>
           </li>
 
           <li>Ademas de
             <ul>
-              <li>Tobillos</li>
-              <li>Articulación Trapezometacarpiana (Raíz del pulgar)</li>
+              <li><strong>Tobillos</strong></li>
+              <li><strong>Articulación Trapezometacarpiana (Raíz del pulgar)</strong></li>
             </ul>
           </li>
         </ul>
 
-      <p>
-      En la Artrosis, la concentración de Ácido Hialurónico en el Líquido Sinovial está disminuida por lo cual las propiedades enumeradas de este fluído están, alteradas.
-      </p>
-
-      <p>
-      La principal indicación del AH  es la Artrosis.
-      </p>
+      </div>
 
       <p>Se recomienda una inyección intra-articular semanal durante tres a cinco semanas.</p>
 
       <p><button>AH y Artrosis</button></p>
 
-      <h2 style="font-size: 22px">Ácido Hialurónico Articular</h2>
-
       <p>
         Las articulaciones poseen en su interior un líquido viscoso y claro que tiene la función de:
       </p>
         <ul>
-            <li>Evitar la fricción entre las superficies articulares</li>
-            <li>Formar un colchón amortiguador que reduce los impactos y los efectos del peso corporal
+            <li><strong>Evitar la fricción entre las superficies articulares</strong></li>
+            <li>Formar un <strong>colchón amortiguador</strong> que reduce los impactos y los efectos del peso corporal
             sobre las superficies articulares.</li>
             <li>Proteger al cartílago auricular</li>
-            <li>Lubricar, favoreciendo el movimiento.</li>
+            <li><strong>Lubricar</strong>, favoreciendo el movimiento.</li>
         </ul>
 
-
       <p>
-        Este líquido se llama Líquido Sinovial y está presente normalmente en las articulaciones.
-        El componente más importante de este líquido es el Ácido Hialurónico el cual es el principal responsable de las propiedades del mismo.
+        Este líquido se llama <strong>Líquido Sinovial</strong> y está presente <strong>normalmente</strong> en las articulaciones.
+        El componente más importante de este líquido es el <strong>Ácido Hialurónico</strong> el cual es el principal responsable de las propiedades del mismo.
         Esta sustancia es segregada por diferentes tipos de células: Sinoviocitos, Condrocitos y Fibroblastos.
       </p>
+
+      <p>
+        Como consecuencia, progresivamente
+      </p>
+      <ul>
+        <li>Se degrada el cartílago articular</li>
+        <li>Se forman osteofitos en los márgenes articulares</li>
+        <li>Se afecta el hueso subcontral, el cual se esclerosa y aparecen pseudo quistes óseos (geodas)</li>
+        
+      </ul>
     </div>
   </div>
   <script src="./main.bundle.js" charset="utf-8"></script>
