--- a/artrosis.html
+++ b/artrosis.html
@@ -20,14 +20,16 @@
 
     <p>Tratamiento con:</p>
 
-    <ul style="padding: 0px 0 40px 0" class="index"></ul>
+    <ul class="index"></ul>
 
-    <div class="text">
+    <div style="margin:0" class="text"></div>
+
+    <div class = "squared">
 
       <p>
-        La Artrosis es una enfermedad que se caracteriza clínicamente en sus etapas avanzadas por:
+        La <strong>Artrosis</strong> es una enfermedad que se caracteriza clínicamente en sus etapas avanzadas por:
       </p>
-        <ul>
+        <ul style="margin:0">
           <li>Dolor mecánico</li>
           <li>Rigidez</li>
           <li>Hinchazón</li>
@@ -35,10 +37,12 @@
           <li>Limitación del movimiento articular</li>
         </ul>
 
+      </div>
+
       <p>
-        Dolor mecánico es aquel que se presenta con el movimiento, cuando la articulación soporta cargas y calma con el reposo.
+        <strong>Dolor mecánico</strong> es aquel que se presenta con el movimiento, cuando la articulación soporta cargas y calma con el reposo.
         Se trata de un dolor crónico con empujes y remisiones.
-        La Artrosis es una patología que se inicia en el Cartílago Articular pero que después termina afectando al Hueso Subcondral,
+        La <strong>Artrosis</strong> es una patología que se inicia en el <strong>Cartílago Articular</strong> pero que después termina afectando al Hueso Subcondral,
         Periostio y a la Sinovial.
       </p>
 
@@ -50,39 +54,39 @@
 
 
       <p>
-        Los signos radiológicos de la Artrosis son:
+        <strong>Los signos radiológicos de la Artrosis</strong> son:
       </p>
         <ul>
-          <li>Pinzamiento Articular, producto de la degeneración del cartílago.</li>
-          <li>Osteofitos, saliencias óseas en forma de "picos de loro" en las márgenes articulares.</li>
-          <li>Esclerosis Subcondrial, aparición de laminillas óseas en las zonas de apoyo, bajo las
+          <li><strong>Pinzamiento Articular</strong>, producto de la degeneración del cartílago.</li>
+          <li><strong>Osteofitos</strong>, saliencias óseas en forma de "picos de loro" en las márgenes articulares.</li>
+          <li><strong>Esclerosis Subcondral</strong>, aparición de laminillas óseas en las zonas de apoyo, bajo las
           lesiones cartilaginosas profundas.</li>
-          <li>Geodas, cavidades pseudoquísticas en el interior del hueso, que están relacionadas con una hiperpresión local.</li>
+          <li><strong>Geodas</strong>, cavidades pseudoquísticas en el interior del hueso, que están relacionadas con una hiperpresión local.</li>
         </ul>
 
       <p>
-        La Sinovial (membrana que recubre por dentro a las articulaciones) puede reaccionar con una hiperproducción de
-        líquido sinovial produciendo un Derrame Articular de tipo mecánico y como consecuencia una "hinchazón de la articulación".
+        La <strong>Sinovial</strong> (membrana que recubre por dentro a las articulaciones) puede reaccionar con una hiperproducción de
+        líquido sinovial produciendo un <strong>Derrame Articular</strong> de tipo mecánico y como consecuencia una "hinchazón de la articulación".
       </p>
 
       <p>
-        En determinados casos aparecen cuerpos extraños dentro de las articulaciones: la Osteocondromatosis Secundaria.
+        En determinados casos aparecen <strong>cuerpos extraños</strong> dentro de las articulaciones: la <strong>Osteocondromatosis Secundaria</strong>.
         Estas estructuras pueden deberse a una Metaplasia de la Sinovial o a pequeños trozos de cartílago que se desprenden del
         revestimiento cartilaginoso.
-        Raramente son palpables. En ocasiones pueden producir breves Bloqueos Articulares al interponerse entre las superficies
+        Raramente son palpables. En ocasiones pueden producir breves <strong>Bloqueos Articulares</strong> al interponerse entre las superficies
         articulares durante los movimientos de la articulación.
       </p>
 
       <p>
-        Participación muscular: muchas veces las deformidades se producen por la Contractura Muscular Antiálgica. Por ejemplo en
+        <strong>Participación muscular</strong>: muchas veces las deformidades se producen por la <strong>Contractura Muscular Antiálgica</strong>. Por ejemplo en
         la rodilla, donde los músculos isquiotibiales son más potentes que el cuádriceps, se produce una deformidad "en flexión"
         de la rodilla, agravando de esta manera el cuadro de fondo.
-        También se produce una atrofia muscular propia de toda patología articular.
+        También se produce una <strong>atrofia muscular</strong> propia de toda patología articular.
         En la rodilla la atrofia del cuádriceps produce inestabilidad articular.
       </p>
 
       <p>
-        Factores que favorecen el inicio de la Artrosis
+        <strong>Factores que favorecen el inicio de la Artrosis</strong>
       </p>
         <ul>
           <li>Edad > 50 años</li>
@@ -98,25 +102,27 @@
           <li>Alteraciones del eje de los miembros que llevan a un desequilibrio de las cargas sobre las articulaciones.
         </ul>
 
+      <hr>
+
       <p>
-        La Artrosis es una enfermedad mecánica y degenerativa, por lo tanto, no se acompaña de ninguna alteración biológica propia
+        La <strong>Artrosis</strong> es una <strong>enfermedad mecánica</strong> y <strong>degenerativa</strong>, por lo tanto, <strong>no se acompaña de ninguna alteración biológica propia</strong>
         en los exámenes de sangre.
        </p>
 
       <p>
-        Evolución: Es variable. Si hay factores mecánicos que la mantienen puede ser progresiva.
+        <strong>Evolución</strong>: Es variable. Si hay factores mecánicos que la mantienen puede ser progresiva.
       </p>
 
-      <h2 style="font-size: 22px">Plasma Rico en Plaquetas</h2>
+      <h2 style="font-size: 22px">Tratamiento de la Artrosis con Plasma Rico en Plaquetas (PRP)</h2>
 
       <p>
-        Las Plaquetas poseen en su interior los llamados Factores de Crecimiento (FC).
-        Los FC son proteínas que tienen la capacidad de regenerar tejidos lesionados, envejecidos o que presentan enfermedades
-        degenerativas.
+        Las <strong>Plaquetas</strong> poseen en su interior los llamados <strong>Factores de Crecimiento (FC)</strong>.
+        Los <strong>FC</strong> son proteínas que tienen la capacidad de <strong>regenerar tejidos lesionados, envejecidos o que presentan enfermedades
+        degenerativas</strong>.
       </p>
 
       <p>
-        En el caso de la Artrosis estos factores actúan sobre el Condrocito (la célula del cartílago) regenerando el cartílago.
+        En el caso de la Artrosis estos factores actúan sobre el Condrocito (la célula del cartílago) <strong>regenerando el cartílago</strong>.
       </p>
       <p>
         El método de obtención del PRP es muy sencillo, un técnico extrae sangre del paciente, centrifuga dicho fluído durante
@@ -130,55 +136,56 @@
       </p>
 
       <p>
-        Las articulaciones más frecuentemente tratadas con PRP son:
+        <strong>Las articulaciones más frecuentemente tratadas con PRP</strong> son:
       </p>
         <ul>
-          <li>Rodillas</li>
-          <li>Caderas</li>
-          <li>Hombros</li>
-          <li>Codos</li>
-          <li>Tobillos</li>
+          <li><strong>Rodillas</strong></li>
+          <li><strong>Caderas</strong></li>
+          <li><strong>Hombros</strong></li>
+          <li><strong>Codos</strong></li>
+          <li><strong>Tobillos</strong></li>
         </ul>
 
       <h2 style="font-size: 22px">Ácido Hialurónico</h2>
 
       <p>
-        El Ácido Hialurónico (AH) es uno de los componentes principales del Líquido Sinovial, Cartílago y de la Membrana Sinovial.
+        El <strong>Ácido Hialurónico (AH)</strong> es uno de los componentes principales del Líquido Sinovial, Cartílago y de la Membrana Sinovial.
         Es producido por los condrocitos (células del Cartílago) y los sinoviocitos (células de la Sinovial).
-        El AH es el responsable de las Propiedades Viscoelásticas del Líquido Sinovial, de la lubricación de la
-        Cavidad Articular y del mantenimiento de la integridad estructural y funcional del Cartílago Articular.
+        El AH es el responsable de las <strong>Propiedades Viscoelásticas</strong> del Líquido Sinovial, de la <strong>lubricación de la
+        Cavidad Articular</strong> y del mantenimiento de la <strong>integridad estructural y funcional del Cartílago Articular</strong>.
       </p>
 
       <p>
-        En la Artrosis, todas estas propiedades del AH están afectadas. Además su concentración está disminuida.
+        En la <strong>Artrosis</strong>, todas estas propiedades del AH están afectadas. Además su concentración está disminuida.
       </p>
       <p>
         Como consecuencia, progresivamente:
       </p>
       <ul>
-        <li>se degrada el cartílago articular</li>
-        <li>se afecta el hueso subcondral, se esclerosa y aparecen quistes óseos (geodas).</li>
-        <li>posteriormente se suceden una cadena de hechos en la articulación y alrededor de ella
+        <li>Se degrada el <strong>cartílago articular</strong></li>
+        <li>Se forman los <strong>osteofitos</strong> en los márgenes articulares</li>
+        <li>Se afecta el hueso subcondral, el cual se esclerosa y aparecen pseudoquistes óseos (<strong>geodas</strong>).</li>
+        <li>Posteriormente se suceden una cadena de hechos en la articulación y alrededor de ella
           (zona periarticular) que llevan al compromiso de la sinovial, cápsula articular, ligamentos, músculos produciendo
         <ul>
-        	<li>Dolor</li>
-          <li>Limitaciones</li>
-          <li>Deformaciones</li>
+        	<li><strong>Dolor</strong></li>
+          <li><strong>Limitaciones</strong></li>
+          <li><strong>Deformaciones</strong></li>
         </ul>
       </li>
       </ul>
       <p>
-        La vía de administración del AH es intraarticular.
+        La vía de administración del <strong>AH</strong> es <strong>intra-articular</strong>.
         Se recomienda de tres a cinco aplicaciones de AH por semana.
       </p>
       <p>
         Las articulaciones más frecuentemente tratados son:
       </p>
         <ul>
-          <li>Rodillas</li>
-          <li>Caderas</li>
-          <li>Hombros</li>
-          <li>Tobillos</li>
+          <li><strong>Rodillas</strong></li>
+          <li><strong>Caderas</strong></li>
+          <li><strong>Hombros</strong></li>
+          <li><strong>Tobillos</strong></li>
         </ul>
     </div>
   </div>
