--- a/ah.html
+++ b/ah.html
@@ -44,9 +44,9 @@
 
       </div>
 
-      <div class = "squared">
+      <h2 style="font-size: 22px">Indicación principal</h2>
 
-      <p>La indicación principal</p>
+      <div class = "squared">
 
         <ul style="margin:0">
           <li><strong>Artrosis</strong> de
@@ -95,7 +95,7 @@
         <li>Se degrada el cartílago articular</li>
         <li>Se forman osteofitos en los márgenes articulares</li>
         <li>Se afecta el hueso subcontral, el cual se esclerosa y aparecen pseudo quistes óseos (geodas)</li>
-        
+
       </ul>
     </div>
   </div>
