--- a/artrosis.html
+++ b/artrosis.html
@@ -18,8 +18,6 @@
   <div style="padding: 70px 0 120px 0">
     <h1 style="padding: 0px 0 40px 0">Artrosis</h1>
 
-    <p>Tratamiento con:</p>
-
     <ul class="index"></ul>
 
     <div style="margin:0" class="text"></div>
@@ -38,6 +36,8 @@
         </ul>
 
       </div>
+
+      <img class="art-pic" src="img/artrosis.jpg" alt="adultos mayores">
 
       <p>
         <strong>Dolor mecánico</strong> es aquel que se presenta con el movimiento, cuando la articulación soporta cargas y calma con el reposo.
@@ -113,7 +113,7 @@
         <strong>Evolución</strong>: Es variable. Si hay factores mecánicos que la mantienen puede ser progresiva.
       </p>
 
-      <h2 style="font-size: 22px">Tratamiento de la Artrosis con Plasma Rico en Plaquetas (PRP)</h2>
+      <h2 style="font-size: 22px">Plasma Rico en Plaquetas (PRP)</h2>
 
       <p>
         Las <strong>Plaquetas</strong> poseen en su interior los llamados <strong>Factores de Crecimiento (FC)</strong>.
