--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@
 
     <div id="abstract">
       <div class="abstract-text">
-        En nuestro consultorio combinamos los principios de la <b>Acupuntura Tradicional China</b> con los conocimientos científicos de la Medicina Occidental. Nuestra condición de <b>Médico y Especialista en Reumatología</b>, junto con más de veinticinco años de estudio y práctica de la Acupuntura, respaldan nuestro trabajo profesional.
+        En nuestro consultorio combinamos los principios de la <b>Acupuntura Tradicional China</b> con los conocimientos científicos de la <b>Medicina Occidental</b>. Nuestra condición de <b>Médico y Especialista en Reumatología</b>, junto con más de veinticinco años de estudio y práctica de la Acupuntura, respaldan nuestro trabajo profesional.
 Como complemento de las terapias del dolor ofrecemos el tratamiento regenerativo con <b>Plasma Rico en Plaquetas</b>. A ésto, le agregamos la terapia intra-articular con <b>Ácido Hialurónico</b>.
 En los últimos años hemos incorporado los <b>tratamientos estéticos con Plasma Rico en Plaquetas</b> y <b>los Hilos Tensores</b>.
       </div>
@@ -125,16 +125,23 @@ En los últimos años hemos incorporado los <b>tratamientos estéticos con Plasm
               <p class="sq2__txt__div__1__p">Tratamiento con</p>
               <div class="sq2__txt__div__1__1">
                 <div class="sq2__txt__div__1__1--half">
-                  Plasma rico en plaquetas
+                  <div>
+                    Plasma rico en plaquetas
+                  </div>
+                  <div class="a-button-div">
+                      <a class="a-button" href="prp.html">Leer más</a>
+                  </div>
                 </div>
                 <div class="sq2__txt__div__1__1--half">
-                  Ácido Hialurónico
+                  <div>
+                    Ácido Hialurónico
+                  </div>
+                  <div class="a-button-div">
+                    <a class="a-button" href="ah.html">Leer más</a>
+                  </div>
                 </div>
                </div>
             </div>
-          </div>
-          <div class="a-button-div">
-            <a class="a-button" href="ah.html">Leer más</a>
           </div>
         </div>
       </div>
@@ -148,6 +155,9 @@ En los últimos años hemos incorporado los <b>tratamientos estéticos con Plasm
              <li>Aumenta la firmeza de la Piel, recuperando su elasticidad y brillo</li>
              <li>Detiene el envejecimiento cutáneo</li>
           </ul>
+          <div style='margin-bottom:55px' class="a-button-div">
+            <a class="a-button" href="prp.html">Leer más</a>
+          </div>
           <p>Hilos Tensores</p>
           <ul>
             <li>Sostienen y reposicionan la Piel y tejidos caídos</li>
@@ -155,7 +165,7 @@ En los últimos años hemos incorporado los <b>tratamientos estéticos con Plasm
             <li>Efecto lifting: Se recupera la tensión de la Piel</li>
           </ul>
           <div class="a-button-div">
-            <a class="a-button" href="ah.html">Leer más</a>
+            <a class="a-button" href="ht.html">Leer más</a>
           </div>
         </div>
       </div>
