--- a/prp.html
+++ b/prp.html
@@ -49,6 +49,17 @@
             <li><strong>Caída del cabello</strong></li>
             <li>Etc</li>
           </ul>
+          <p>El tratamiento con Plasma Rico en Plaquetas promueve la regeneración celular, formación de colágeno, fibras elásticas y Ácido Hialurónico</p>
+          <p>Tratamientos de:</p>
+          <ul>
+            <li>Cara</li>
+            <li>Cuello</li>
+            <li>Manos</li>
+            <li>Cicatrices</li>
+            <li>Estrías</li>
+            <li>Caída del cabello</li>
+            <li>Etc.</li>
+          </ul>
         </li>
     </ul>
 
