--- a/cv.html
+++ b/cv.html
@@ -20,11 +20,10 @@
 
     <div class="text">
       <ul>
-        <li><b>1981</b> <ul><li> 11 de noviembre -	Título de Doctor en Medicina</li></ul></li>
+        <li><b>1981</b> <ul><li> 11 de noviembre -	<strong>TÍTULO DE DOCTOR EN MEDICINA</strong></li></ul></li>
 
-        <li><b>1983</b> <ul><li> 5 y 6 de agosto - Miembro Efectivo de la Jornada Internacional de Reumatología en Santa Ana de Livramento, Brasil</li></ul></li>
-
-        <li><b>1983</b> <ul><li> 15 de octubre - Miembro Titular del XIII Congreso Uruguayo  de Reumatología en el Instituto Nacional de Reumatología, Montevideo, Uruguay</li></ul></li>
+        <li><b>1983</b> <ul><li> 5 y 6 de agosto - Miembro Efectivo de la <strong>Jornada Internacional de Reumatología</strong> en Santa Ana de Livramento, Brasil</li>
+        <li> 15 de octubre - Miembro Titular del <strong>XIII Congreso Uruguayo  de Reumatología</strong> en el Instituto Nacional de Reumatología, Montevideo, Uruguay</li></ul></li>
 
         <li><b>1984</b> <ul><li> 26 y 27 de octubre - Miembro Titular de las Jornadas Uruguayas de Reumatología en el Instituto Nacional de Reumatología, Montevideo, Uruguay</li></ul></li>
 
@@ -42,7 +41,7 @@
             <li> 1 de setiembre - Nombramiento como Socio Activo de la Sociedad Uruguaya de Reumatología</li>
             <li> 27 de setiembre - 	Miembro Titular de las Actualizaciones en Reumatología, Cap III, Rodilla Dolorosa, Aspectos Prácticos, Clínicos y Terapéuticos, Montevideo, Uruguay</li>
             <li> 18 y 19 de octubre -	Miembro Titular del XIV Congreso Uruguayo de Reumatología. Intendencia Municipal de Montevideo, Montevideo, Uruguay</li>
-            <li> 10 de diciembre - 	Título de Especialista en Reumatología</li>
+            <li> 10 de diciembre - 	<strong>TÍTULO DE ESPECIALISTA EN REUMATOLOGÍA</strong></li>
           </ul>
         </li>
 
@@ -66,7 +65,7 @@
 
         <li><b>1991</b>
           <ul>
-            <li> 1 de marzo - Diploma de acupuntor
+            <li> 1 de marzo - <strong>DIPLOMA DE ACUPUNTOR</strong>
               <li>Curso de Acupuntura General, Teórico y Práctico, organizado por el Centro de Intercambio Médico Sino - Uruguayo. Registro en el Ministerio de Educación y Cultura de la ROU N° 155, con permiso del MSP
                 <ul>
                   <li>Chinese Medical Collage Hospital of the Republic of China</li>
@@ -297,7 +296,7 @@
               6 - 7 de julio -	Curso Full Immersion de Lifting No Quirurgico. Sociedad Argentina de Medicina Estética. Buenos Aires, Argentina
             </li>
             <li>
-              6 de setiembre - Curso Avanzado Intensivo de Hilos PDO en Estética Facial y Corporal, dictado por la Dra. Silvia Cabrera Carpio (Mexico) - Instituto Pinto. Buenos Aires, Argentina
+              6 de setiembre - <strong>Curso Avanzado Intensivo de Hilos PDO en Estética Facial y Corporal</strong>, dictado por la Dra. Silvia Cabrera Carpio (Mexico) - Instituto Pinto. Buenos Aires, Argentina
             </li>
           </ul>
         </li>
