--- a/ht.html
+++ b/ht.html
@@ -33,9 +33,9 @@
     </div>
 
     <ul>
-      <li><strong>No es cirujía</strong></li>
+      <li><strong>No es cirugía</strong></li>
       <li>Son hilos reafirmantes de PDO (Polidioxanona) que se depositan en el tejido subcutáneo</li>
-      <li>Se trata de los mismo hilos de sutura reabsorbibles utilizados en cirujía</li>
+      <li>Se trata de los mismo hilos de sutura reabsorbibles utilizados en cirugía</li>
       <li>Tratamiento rápido, seguro, eficaz</li>
       <li>Duración del procedimiento: 30 min aproximadamente</li>
       <li>Después del tratamiento el paciente continúa con su actividad de manera normal</li>
@@ -61,17 +61,15 @@
       <li>Eleva las cejas</li>
       <li>Mejora las patas de gallo y el contorno de los ojos</li>
       <li>Mejora los surcos nasogenianos</li>
-      <li>
-      OTRAS ZONAS
+      <br>
+      <p>OTRAS ZONAS</p>
         <ul>
           <li>Zona interna de brazos y muslos</li>
           <li>Glúteos</li>
           <li>Abdomen</li>
         </ul>
-      </li>
     </ul>
-
-    <p>PARA EL TRATAMIENTO DE HILOS TENSORES:</p>
+    <hr>
     <ul>
       <li>No hay una preparación previa por parte del paciente</li>
       <li>Los primeros resultados se visualizan inmediantamente</li>
