--- a/index.html
+++ b/index.html
@@ -128,18 +128,15 @@ En los últimos años hemos incorporado los <b>tratamientos estéticos con Plasm
                   <div>
                     Plasma rico en plaquetas
                   </div>
-                  <div class="a-button-div">
-                      <a class="a-button" href="prp.html">Leer más</a>
-                  </div>
                 </div>
                 <div class="sq2__txt__div__1__1--half">
                   <div>
                     Ácido Hialurónico
                   </div>
-                  <div class="a-button-div">
-                    <a class="a-button" href="ah.html">Leer más</a>
-                  </div>
                 </div>
+               </div>
+               <div class="a-button-div">
+                 <a class="a-button" href="artrosis.html">Leer más</a>
                </div>
             </div>
           </div>
