meridianos y puntos de acupuntura

--- a/acupuntura.html
+++ b/acupuntura.html
@@ -241,6 +241,23 @@
           <li>Etc</li>
         </ul>
 
+        <h3 style="font-size: 20px">Meridianos</h3>
+
+        <p>De acuerdo a la Medicina Tradicional China (MTCH), los meridianos son canales por donde circula la energía vital (Chi)
+        del cuerpo, responsable del estado y funcionamiento de los órganos y tejidos. A lo largo de ellos se encuentran los puntos
+        de acupuntura.
+        Se trata de zonas a través de los cuales podemos regular el flujo de esa energía.
+        </p>
+        <p>Cuando hay una obstrucción a la libre circulación energética aparecen las enfermedades físicas y psíquicas.
+        Cuando la energía circula sin obstáculos el resultado es la salud.
+        </p>
+
+        <h3 style="font-size: 20px">Puntos de acupuntura</h3>
+
+        <p>
+        Son zonas ubicadas en la superficie de la piel, de apenas 1-2 mm de tamaño, en general situadas sobre depresiones (a veces invisibles, solamente palpables) o huecos a lo largo de los meridianos o fuera de ellos, donde la inserción de agujas muy finas (u otro estímulo) produce un efecto terapéutico.
+        </p>
+
       <h2 style="font-size: 30px; text-align: center">Acupuntura y el conocimiento cientifico</h2>
 
       <div class = "squared">
